force-app/main/default/objects/Lex_IVR_Setup__c/Lex_IVR_Setup__c.object-meta.xml
<CustomObject>
    <description>This object is used for NA IVR to define Business Hours and different prompts for Sales, Care, and Data Management line.</description>
    <label>Lex IVR Setup</label>
    <nameField>
        <label>Lex IVR Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lex IVR Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>