force-app/main/default/objects/Lex_IVR_Setup__c/fields/Is_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Is_Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you want to Switch the phone lines off for a temporary period then mark this checkbox as true and the caller will hear the message from the &quot;Emergency Prompt&quot; field.</description>
    <inlineHelpText>If you want to Switch the phone lines off for a temporary period then mark this checkbox as true and the caller will hear the message from the &quot;Emergency Prompt&quot; field.</inlineHelpText>
    <label>Is Emergency?</label>
    <type>Checkbox</type>
</CustomField>