force-app/main/default/objects/Lex_IVR_Setup__c/fields/Off_hours_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Off_hours_Prompt__c</fullName>
    <label>Off-hours Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>