force-app/main/default/objects/Lex_IVR_Setup__c/validationRules/Restrict_Changing_Record_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Changing_Record_Name</fullName>
    <active>true</active>
    <description>This rule prevents users from changing the Lex IVR Setup Record Name once it is created. This is to avoid the collapsing of IVR as these Names are directly mapped in the contact flows.</description>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorMessage>You can not change the Name of this record.</errorMessage>
</ValidationRule>